# Letterbox

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  flake.nix  renovate.json
.github/workflows/: ci.yml
migrations/: V1__create_threads.sql  V2__create_messages.sql  V3__create_blocked_users.sql  V4__create_tags.sql
nix/: module-with-overlay.nix  module.nix  vm-test.nix
nix/pkgs/: letterbox.nix
src/: common.rs  config.rs  error_handler.rs  formatting.rs  main.rs  util.rs
src/commands/: block.rs  close.rs  common.rs  contact.rs  delete.rs  edit.rs  info.rs  manage_tags.rs  mod.rs  reply.rs  unblock.rs  util.rs
src/data/: blocked_users.rs  mod.rs  received_messages.rs  sent_messages.rs  tags.rs  threads.rs
src/event_handlers/: incoming_edit.rs  incoming_message.rs  incoming_reaction_add.rs  incoming_reaction_delete.rs  mod.rs  outgoing_message.rs  thread_create_warning.rs  thread_delete.rs  thread_member_join.rs  thread_member_leave.rs  thread_rename_correction.rs
src/formatting/: fake_snapshot.rs  message_embed.rs  mod.rs  thread_info.rs  user_info_embed.rs  wish_dot_com_snapshot.rs
src/util/: attachments.rs  json_error_codes.rs  markdown.rs  mod.rs
