[package]
name = "letterbox"
version = "1.0.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
poise = "0.6.1"
refinery = { version = "0.8.14", features = [ "tokio-postgres" ] }
serde = "1.0.215"
tokio = { version = "1.42.0", features = [ "rt-multi-thread" ] }
tokio-postgres = "0.7.12"
toml = "0.8.19"
