[package]
name = "letterbox"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
poise = "0.6.1"
refinery = { version = "0.8.14", features = [ "tokio-postgres" ] }
serde = "1.0.215"
tokio = { version = "1.42.0", features = [ "rt-multi-thread", "signal" ] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
toml = "0.8.19"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "92776b0b6120c8a1054cf139bf12b01984a12301"}

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "deny"
